--- a/src/assets/scss/elements/_cart.scss
+++ b/src/assets/scss/elements/_cart.scss
@@ -3,6 +3,27 @@
     margin-bottom: 120px;
 }
 
+.cart_page .cart_from .cart_empty{
+    min-height: 65px;
+    font-size: 15px;
+    background-color: #F0F1F3;
+    color: $paletteColor3;
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    margin-bottom: 50px;
+}
+
+.cart_page .cart_from .cart_empty .icon{
+    font-size: 20px;
+    margin-right: 15px
+}
+
+.cart_page .cart_from .cart_empty_btn{
+    @include button;
+}
+
 .cart_page .cart_from .shop_table{
     @include apple_system_font;
     @media #{$large_mobile} {
@@ -89,10 +110,10 @@
     display: inline-block;
 }
 
-.cart_page .cart_from .shop_table tbody tr .product_quantity input[type="text"]{
+.cart_page .cart_from .shop_table tbody tr .product_quantity .quantity{
     width: 100%;
     height: 100%;
-    padding: 0px 31px;
+    padding: 3px 0px;
     border: 1px solid $paletteColor5;
     border-radius: 6px;
     background: transparent;
