--- a/src/assets/scss/elements/_product_details.scss
+++ b/src/assets/scss/elements/_product_details.scss
@@ -76,10 +76,10 @@
     display: inline-block;
 }
 
-.product_details .content .summary .cart_from .cart_action .product_quantity input[type="text"]{
+.product_details .content .summary .cart_from .cart_action .product_quantity .quantity{
     width: 100%;
     height: 100%;
-    padding: 0px 31px;
+    padding: 14px 0px;
     border: 1px solid $paletteColor5;
     border-radius: 6px;
     background: transparent;
@@ -88,6 +88,7 @@
     text-align: center;
     font-size: 15px;
     @include transition;
+    user-select: none;
 }
 
 .product_details .content .summary .cart_from .cart_action .product_quantity .increase,
